--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
     <div class="container text-center my-auto"><br><br>
       <h1 class="mb-1" style="color:white; font-size: 70px">고객은 당신의 서비스를 <br>어떻게 생각하나요 ?</h1>
       <h3 class="mb-5" style="color:whitesmoke">
-        <h5 style="color: white; font-family: 'Noto Sans KR:wght@100', sans-serif;"> <br>그린 테스터들에게 확인하세요 !</h5>
+        <h5 style="color: white; font-family: 'Noto Sans KR:wght@100', sans-serif;"> <br>그린 테스터에서 확인하세요 !</h5>
       </h3>
-      <a class = "js-scroll-trigger" href="#about" style="color:green" ><b></b></a><br><br>
-      <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about" style="font-family: 'Roboto:wght100', sans-serif;">VIEW MORE</a>
+      <a class = "js-scroll-trigger" href="#service" style="color:green" ><b></b></a><br><br>
+      <a class="btn btn-primary btn-xl js-scroll-trigger" href="#service" style="font-family: 'Roboto:wght100', sans-serif;">VIEW MORE</a>
     </div>
     <div class="overlay"></div>
   </header>
@@ -78,13 +78,11 @@
         <!--col-lg-숫자에서 숫자가 클 수 록 화면이 넓어짐-->
         <div class="col-lg-15 mx-auto" style="font-size:20px">
           <div class="content-section-heading">
-              <h3 class="text-secondary mb-0" style="font-family:'Roboto:wght@100', sans-serif;"><p style="color:#3daf2c; font-size: 20px; font-family:'Noto Sans KR:wght@100', sans-serif; "><b>Service</b></p></h3>
+              <h3 class="text-secondary mb-0" style="font-family:'Roboto', sans-serif;"><p style="color:#3daf2c; font-size: 20px; font-family:'Noto Sans KR:wght@100', sans-serif; "><b>Service</b></p></h3>
               <img src="img/bar.png " width="50" height="5"><br>
-              <img src="img/biglogo.png " width="500">
-            </div>
-
-          <p ><b>서비스에 맞는 테스터를 직접 선택하여 사용자 테스트를 진행할 수 있는 서비스.</b></p>
-          <p><b>전문가가 아닌 실제 사용자들로 구성된 테스터들에게 원하는 질문을 직접 작성할 수 있는 서비스. &nbsp; </b></p>
+              <img src="img/biglogo.png " width="450">
+          </div>
+          <h3 style="font-family: 'Noto Sans KR', sans-serif; font-weight: 400; font-size: 25px"><b>서비스에 맞는 테스터를 직접 선택하고 사용자 테스트를 진행해 보세요.</b></h3>
           
               <div class="row">
                   <div class="col-lg-15 mx-auto">
@@ -121,7 +119,7 @@
           <h4>
             <strong>테스트 신청</strong>
           </h4>
-          <p class="text-faded mb-0" style="color:black; font-size: 19px">현재 베타테스트로 무료!</p>
+          <p class="text-faded mb-0" style="color:black; font-size: 19px">현재 베타테스트로 무료 !<br>메일로 코드를 받아보세요.</p>
         </div>
         <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
           <span class="service-icon rounded-circle mx-auto mb-3">
@@ -225,7 +223,7 @@
         <br><br><br><br><br><br><br><br>
       <h1 class="mb-1 " style="font-family: 'Roboto', sans-serif; font-weight: 100; font-size: 70px; color:white" >NOW LISTEN UP<br>YOUR CUSTOMER' VOICE<br></h1>
       <br>
-      <h3 style="font-family: 'Noto Sans KR', sans-serif; font-size:20px; font-weight: 200 ;color:white;"><b>베타 테스트로 모든 비용은 무료로 진행됩니다. <br><br>그린 테스터와 함께 당신의 서비스에 대한 고객의 의견을 들어보세요.</b></h3>
+      <h3 style="font-family: 'Noto Sans KR', sans-serif; font-size:20px; font-weight: 200 ;color:white;"><b>베타 테스트로 모든 비용은 무료로 진행됩니다. <br>그린 테스터와 함께 당신의 서비스에 대한 고객의 의견을 들어보세요.</b></h3>
       <br><br>
       <a class="btn btn-primary btn-xl js-scroll-trigger" href="index21.html" target="_blank" style="font-family: 'Roboto', sans-serif;">무료로 테스트 하러 가기</a>
       <br><br><br><br>
@@ -265,10 +263,10 @@
   <!-- Contact Us 페이지, 여기서 테스터 지원하기 버튼! -->
   <section class="content-section  text-white" id="Contact" style="background: #f2f4f1" >
     <div class="container text-center">
-      <h2 class style="font-family: 'Roboto', sans-serif; text-align: left;font-weight: 200; color:black"><b>Contact with us<span style="font-family: 'Roboto', sans-serif;font-size:15px;color:black"> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Email: gajahcompany@gmail.com</span></b> </h2> 
+      <h2 class style="font-family: 'Roboto', sans-serif; text-align: left;font-weight: 200; color:black"><b>Contact Us<span style="font-family: 'Roboto', sans-serif;font-size:15px;color:black"> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; Email: gajahcompany@gmail.com</span></b> </h2> 
       <img src="img/bar.png " width="1100" height="2"><br>
       <br>
-      <h3 style="font-family: 'Noto Sans KR', sans-serif; font-size:20px; font-weight:100; color:black; text-align: left"><b>고객의 의견을 전달하는 그린 테스터는 당신의 서비스의 <br> 성공 가능성을 높이도록 도와 드리겠습니다.</b></h3>
+      <h3 style="font-family: 'Noto Sans KR', sans-serif; font-size:20px; font-weight:100; color:black; text-align: left"><b>고객의 의견을 들려주는 그린 테스터는 당신의 서비스의 <br> 성공 가능성을 높이는 데 도움이 되리라고 확신합니다.</b></h3>
       <br> 
     </div>
   </section>
