--- a/index4.html
+++ b/index4.html
@@ -55,8 +55,8 @@
         <h1 class="mb-1" style="color:white; font-family: 'Noto Sans KR', sans-serif;">우리는 서비스를 생각하는 <br>Green Tester<br>입니다.</h1>
 
       <a class = "js-scroll-trigger" href="#about" style="color:green" ><b></b></a><br><br><br><br><br>
-      <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about" style="font-family: 'Philosopher', sans-serif;">테스터 지원하기</a> &nbsp;
-      <button type="submit" class="btn btn-primary btn-xl" id="tester123" onclick="alert('준비 중입니다.')" >기존 테스터</button>
+      <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about" style="font-family: 'Philosopher', sans-serif;">테스터 지원하기</a> &nbsp;<br><br>
+      <button type="submit" class="btn btn-primary btn-xl" style="font-family: 'Noto Sans KR', sans-serif" id="tester123" onclick="alert('준비 중입니다.')" > 테스터 로그인 &nbsp;</button>
       
     </div>
     <div class="overlay"></div>
