--- a/index4.html
+++ b/index4.html
@@ -96,7 +96,7 @@
             <div class="container text-center" style="font-size:20px; font-family: 'Noto Sans KR:wght@100', sans-serif;">
                 <br><br><br><b>
                 <p style="font-size:25px; font-weight: 300;"><b>- 테스터 비용 -</b></p>
-                <p  style="color: black; font-weight: 100;">등급에 따라 3천원 ~ 6천원 지급</p></p>
+                <p  style="color: black; font-weight: 100;">등급에 따라 3500원 ~ 5000원 지급</p></p>
                 <br><br>
                 <p style="font-size:25px; font-weight: 300;"><b> 그린 테스터로 함께하고 싶으신 분들의 많은 지원 바랍니다.</b> </p>
                 <br><br>
