--- a/index23.html
+++ b/index23.html
@@ -43,10 +43,10 @@
           <a class="navbar-brand js-scroll-trigger" href="#page-top"><img class="img-fluid" src="img/logo.png" width="280" alt="">
           </a>
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" style="color:white; font-family: 'Roboto', sans-serif; font-size: 15px">Menu <i class="fas fa-bars"></i></button>
-
+          
       </div>
   </nav>
-
+  
 
 
   <!-- Header -->
@@ -56,25 +56,31 @@
 
 
   <!-- 테스트지 작성 페이지 -->
-  <section class="callout2" id="test1" style="font-family: 'Nanum Gothic Coding', monospace;">
-        <div class="row">
-                <div class="col-lg-10 mx-auto text-center">
-                    <h2 class="mb-5" style="font-family: 'Philosopher', sans-serif;">그린테스터들에게 전송했습니다.</h2>
-                    <h2 class="mb-5" style="font-family: 'Philosopher', sans-serif;">기간은 3~4일 정도 소요됩니다.</h2>
-                    <h2 class="mb-5" style="font-family: 'Philosopher', sans-serif;">테스트가 완료되면 메일/전화로 결과 보고서가 제출됩니다.</h2>
-                    <h2 class="mb-5" style="font-family: 'Philosopher', sans-serif;">감사합니다.</h2>
+  <section class="background-color:white" >
+      <div class="container text-center mx-auto ">
+          <br><br><br><br><br><br><br><br>
+        <h1 class="mb-1 " style="font-family: 'Noto Sans KR', sans-serif;font-size: 60px;" >테스트를 진행해 주셔서 감사합니다.<br></h1>
+        <br><br><br><br><br>
+        <h3 style="font-family: 'Noto Sans KR', sans-serif; font-size:20px; font-weight: 200 ;"><b>기간은 3 ~ 4일 정도 소요되며 테스트가 완료되면 메일로 테스트 결과물을 전송해 드립니다.</b></h3>
+        <h3 style="font-family: 'Noto Sans KR', sans-serif; font-size:20px; font-weight: 200 ;"><b>테스트 결과물을 받아보신 후 간단한 질문과 테스터 평가를 부탁드립니다.</b></h3>
+        <h3 style="font-family: 'Noto Sans KR', sans-serif; font-size:20px; font-weight: 200 ;"><b>관련 내용은 테스터 결과물과 함께 메일로 전송해 드리겠습니다.</b></h3>
+      
+        <br><br><br><br>
+        <h3 style="font-family: 'Noto Sans KR', sans-serif; font-size:15px; font-weight: 200 ;"><b>* 문의 사항이 있으시다면 아래의 메일로 문의 주세요.</b></h3>
+        <br>
+        <h3 style="font-family: 'Noto Sans KR', sans-serif; font-size:15px; font-weight: 200 ;"><b>gajahcompany@gmail.com</b></h3>
+        <br>
+        <img src="img/index2_logo.png" width="400">
+        <br><br><br><br>
+        <h3 style="font-family: 'Noto Sans KR', sans-serif; font-size:20px; font-weight: 100 ;"><b>--------------------------------------------------------------------------------------</b></h3>
+        <h3 style="font-family: 'Noto Sans KR', sans-serif; font-size:20px;"><b>* 제휴사 *</b></h3><br>
+        <h3 style="font-family: 'Noto Sans KR', sans-serif; font-size:20px; font-weight: 200 ;"><b>개발사: </b></h3>
+        <h3 style="font-family: 'Noto Sans KR', sans-serif; font-size:20px; font-weight: 200 ;"><b>디자인: </b></h3>
+        <h3 style="font-family: 'Noto Sans KR', sans-serif; font-size:20px; font-weight: 200 ;"><b>UX 디자인: </b></h3><br>
+        <h3 style="font-family: 'Noto Sans KR', sans-serif; font-size:15px; font-weight: 200 ;"><b> 그린테스터와 함께 할 제휴사를 모집합니다. 메일로 문의 주세요.</b></h3><br>
+      </div>
 
-
-                    <h2 class="mb-5" style="font-family: 'Philosopher', sans-serif;">**제휴 기업**</h2>
-                    <h2 class="mb-5" style="font-family: 'Philosopher', sans-serif;">서비스의 보완점을 아래의 회사로 할인된 가격으로 이용해 보세요!</h2>
-                    <h2 class="mb-5" style="font-family: 'Philosopher', sans-serif;">개발사:</h2>
-                    <h2 class="mb-5" style="font-family: 'Philosopher', sans-serif;">디자인:</h2>
-                    <h2 class="mb-5" style="font-family: 'Philosopher', sans-serif;">ux디자인:</h2>
-                    <!--데이터들 서버로 전송하고 다음 페이지로 이동-->
-
-                </div>
     </section>
-
 
 
 
@@ -82,7 +88,7 @@
     </div>
   </section>
 
-
+ 
 
 
 
@@ -90,8 +96,8 @@
   <!-- Footer -->
   <footer class="footer text-center" style="background-color:black; opacity: 0.9;">
       <div class="container">
-          <nav class="pull-left">
-              <a href="index.html">
+          <nav class="pull-left">            
+              <a href="index.html"> 
                   <span style="font-size:20px; color: rgb(229, 250, 224);font-family: 'Nanum Gothic Coding', monospace;">서비스 소개</span>
               </a>
               &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
