--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
   <section class="callout" id="price">
     <div class="container text-center mx-auto ">
         <br><br><br><br><br><br><br><br>
-      <h1 class="mb-1 " style="font-family: 'Roboto', sans-serif; font-weight: 100; font-size: 60px; color:white" >NOW LISTEN UP<br>YOUR CUSTOMER' VOICE<br></h1>
+      <h1 class="mb-1 " style="font-family: 'Roboto', sans-serif; font-weight: 100; font-size: 60px; color:white; transform: scale(1,.9)" >NOW LISTEN UP<br>YOUR CUSTOMER' VOICE<br></h1>
       <br>
       <h3 style="font-family: 'Noto Sans KR', sans-serif; font-size:14px; font-weight: 200 ;color:white;"><b>베타 테스트로 모든 비용은 무료로 진행됩니다.</b></h3>
       <h3 style="font-family: 'Noto Sans KR', sans-serif; font-size:14px; font-weight: 200 ;color:white;"><b>그린 테스터와 함께 당신의 서비스에 대한 고객의 의견을 들어보세요.</b></h3>
@@ -254,7 +254,7 @@
   <!-- Contact Us 페이지, 여기서 테스터 지원하기 버튼! -->
   <section class="content-section  text-white" id="Contact" style="background: #f2f4f1" >
     <div class="container text-center">
-      <h3 class style="font-family: 'Roboto', sans-serif; text-align: left; font-weight: 400; color:black"><p><b>Contact Us<span style="font-family: 'Roboto', sans-serif;font-size:15px;color:black;font-weight: 300;">  &nbsp;  &nbsp; &nbsp;  &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; Email: gajahcompany@gmail.com</span></b><br><span style="font-size:1px"><img src="img/bar.png " width="1100" height="2"></span></p> </h3> 
+      <h3 class style="font-family: 'Roboto', sans-serif; text-align: left; font-weight: 400; color:black; line-height: 0.3" ><p><b>Contact Us<span style="font-family: 'Roboto', sans-serif;font-size:15px;color:black;font-weight: 300;">  &nbsp;  &nbsp; &nbsp;  &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; Email: gajahcompany@gmail.com</span></b><br><span style="font-size:1px"><img src="img/bar.png " width="1100" height="2"></span></p></h3> 
       <br>
       <h3 style="font-family: 'Noto Sans KR', sans-serif; font-size:16px; font-weight:400; color:black; text-align: left">고객의 의견을 들려주는 그린 테스터는 당신의 서비스의</h3>
       <p style="font-size:5px"></p>
