--- a/index2.html
+++ b/index2.html
@@ -81,7 +81,7 @@
                 <div class="text-center"><img class="img-fluid" src="img/index2_logo.png" width="400" display="block" margin="0px auto" alt=""></div><hr>
                 <form name="test">
                     <div class="form-group row">
-                        <label for="client" class="col-sm-2 col-form-label">의뢰 고객</label>
+                        <label for="client" class="col-sm-2 col-form-label" style="font-size:15px">*의뢰 고객</label>
                         <div class="col-sm-4">
                             <input type="text" class="form-control" name='client'id="client" placeholder="ex)홍길동" autofocus required>
                             <div class="invalid-tooltip">
@@ -90,15 +90,15 @@
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label for="inputAW" class="col-sm-2 col-form-label">App/Web 명</label>
+                        <label for="inputAW" class="col-sm-2 col-form-label" style="font-size:15px">*App/Web<br>&nbsp; 이름</label>
                         <div class="col-sm-6">
                             <input type="text" class="form-control" id="inputAW" placeholder="ex)그린 테스터 어플" required>
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label for="inputService" class="col-sm-2 col-form-label">서비스 요약</label>
+                        <label for="inputService" class="col-sm-2 col-form-label"style="font-size:15px">*서비스 <br>&nbsp; 요약</label>
                         <div class="col-sm-9">
-                            <textarea type="text" class="form-control" id="inputService" placeholder="ex)사용자 테스트를 진행하여..." required></textarea>
+                            <textarea type="text" class="form-control" id="inputService" placeholder="ex)테스터 연결 서비스" required></textarea>
                         </div>
                     </div>
                     <div class="form-group row">
@@ -157,11 +157,11 @@
                     </div>
                     <hr>
                     <div class="form-group">
-                        <label for="testDetails" class="testDetails">테스트 요청사항</label>
-                        <textarea class="form-control" id="testDetails" rows="5" placeholder="테스트를 통해 얻고 싶은 부분, 테스터들의 시스템 이해도 확인을 간단한 질문 등" required></textarea>
+                        <label for="testDetails" class="testDetails">* 테스트 요청사항</label>
+                        <textarea class="form-control" id="testDetails" rows="5" placeholder="테스트를 통해 얻고 싶은 부분, 테스터들의 시스템 이해도 확인을 간단한 추가 질문 등" required></textarea>
                     </div>
                     <div class="form-group">
-                        <label for="ckecklist" class="ckecklist">* 체크리스트(고정)</label>
+                        <label for="ckecklist" class="ckecklist"> 체크리스트(고정)</label>
                         <div class="input-group">
                             <div class="input-group-prepend">
                                 <div class="input-group-text">1</div>
@@ -182,7 +182,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="question" class="question">* 질문 <br>(입력가능, 미 입력 시 예시 질문으로 진행 됩니다.)</label>
+                        <label for="question" class="question"> 질문 <br>(입력가능, 미 입력 시 예시 질문으로 진행 됩니다.)</label>
                         <div class="input-group">
                             <div class="input-group-prepend">
                                 <div class="input-group-text">Q1</div>
@@ -621,11 +621,11 @@
                     <div class="container">
                 <form>
                     <div class="form-group row">
-                        <div class="col-sm-2"><label for="InputEmail">E-mail</label></div>
+                        <div class="col-sm-2"><label for="InputEmail">*E-mail</label></div>
                         <div class="col-sm-9"><input type="email" class="form-control" id="InputEmail" aria-describedby="emailHelp" placeholder="gajah@example.com" required></div>
                     </div>
                     <div class="form-group row">
-                        <div class="col-sm-2"><label for="InputPhone">연락처</label></div>
+                        <div class="col-sm-2"><label for="InputPhone">*연락처</label></div>
                         <div class="col-sm-9">
                         <input type="tel" class="form-control" id="InputPhone" placeholder="010-1234-5678" required>
                         </div>
@@ -661,7 +661,7 @@
     <div class="container">
         <img class="img-fluid" src="img/1logo.png" width="300" alt=""><br>
         <div class="copyright" style="color:rgb(229, 250, 224)">
-            <span style="font-size:15px; text-emphasis-position: center">Copyright &copy; GAJAH 2019. All Rights Reserved</span>
+            <span style="font-size:10px; text-emphasis-position: center">Copyright &copy; GAJAH 2019. All Rights Reserved</span>
         </div>
 
     </div>
