--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="">
 
   <title>Green Tester - Beta GreenTester</title>
-
+  <link rel="shortcut icon" href="img/favicon.ico">
   <!-- Bootstrap Core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
