--- a/index21.html
+++ b/index21.html
@@ -11,7 +11,7 @@
   <meta name="author" content="">
 
   <title>Green Tester - Beta GreenTester</title>
-
+  <link rel="shortcut icon" href="img/favicon.ico">
   <!-- Bootstrap Core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
