--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
   <section class="callout" id="price">
     <div class="container text-center mx-auto ">
         <br><br><br><br><br><br><br><br>
-      <h1 class="mb-1 " style="font-family: 'Roboto', sans-serif; font-weight: 100; font-size: 60px; color:white; transform: scale(1,0.95)" >NOW LISTEN UP<br>YOUR CUSTOMER' VOICE<br></h1>
+      <h1 class="mb-1 " style="font-family: 'Roboto', sans-serif; font-weight: 100; font-size: 60px; color:white; transform: scale(1,0.95)" >NOW LISTEN TO<br>YOUR CUSTOMER'S VOICE<br></h1>
       <br>
       <h3 style="font-family: 'Noto Sans KR', sans-serif; font-size:14px; font-weight: 200 ;color:white;"><b>베타 테스트로 모든 비용은 무료로 진행됩니다.</b></h3>
       <h3 style="font-family: 'Noto Sans KR', sans-serif; font-size:14px; font-weight: 200 ;color:white;"><b>그린 테스터와 함께 당신의 서비스에 대한 고객의 의견을 들어보세요.</b></h3>
