--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         <br>
         <h3 style="font-family: 'Roboto', sans-serif; font-size:20px; font-weight: 100 ;color:white;"><b>Welcome to your customer-centered service !</b></h3>
         
-        <img src="img/sample.png" width="450"><br><br>
+        <img src="img/sample12.png" width="350"><img src="img/sample13.png" width="350"><br><br>
         <h6 style="font-family: 'Noto Sans KR', sans-serif; font-size:13px; font-weight: 200 ;color:white;"><br> 개발사의 한줄평, 테스트 진행 내역은 블로그에서 확인하실 수 있습니다 !</h6>
         <a href="https://blog.naver.com/PostList.nhn?blogId=gajahcompany&from=postList&categoryNo=7" style="color:#cfe7d0;" target="_blank"><u><b>테스트 결과 보러가기 </b></u></a><br>
         </div>
