--- a/index.html
+++ b/index.html
@@ -238,30 +238,23 @@
   
 
 
-  <!--
-      <div class="section section-gray section-clients" id="portfolio2" style="font-family: 'Noto Sans KR', sans-serif;" >
-    <div class="container text-center">
-        <h4 class="header-text"><br><br><br>현재까지 고객의 소리를 들은 서비스</h4>
-        <p>
-          <marquee direction="right" style="font-family: 'Roboto', sans-serif;"><h4> Welcome to <em>your</em> customer-centered Service!</h4><br></marquee>
-        
-        </p>
-        <img class="img-fluid" src="img/customer.png" width="800" alt="">
-        <br>  <br>        <br>  <br>        <br>  <br>
-    </div>
-</div>
-  -->
+
 
 
   <!-- Contact Us 페이지, 여기서 테스터 지원하기 버튼! -->
   <section class="content-section  text-white" id="Contact" style="background: #f2f4f1" >
     <div class="container text-center">
-      <h3 class style="font-family: 'Roboto', sans-serif; text-align: left; font-weight: 400; color:black; line-height: 0.3" ><p><b>Contact Us<span style="font-family: 'Roboto', sans-serif;font-size:15px;color:black;font-weight: 300;">  &nbsp;  &nbsp; &nbsp;  &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; Email: gajahcompany@gmail.com</span></b><br><span style="font-size:1px"><img src="img/bar.png " width="1100" height="2"></span></p></h3> 
+      <h3 class style="font-family: 'Roboto', sans-serif; text-align: left; font-weight: 400; color:black; line-height: 0.3" ><p><b>Contact Us<span style="font-family: 'Roboto', sans-serif;font-size:15px;color:black;font-weight: 300;"></span></b><br><span style="font-size:1px"><img src="img/bar.png " width="1100" height="2"></span></p></h3> 
       <br>
       <h3 style="font-family: 'Noto Sans KR', sans-serif; font-size:16px; font-weight:400; color:black; text-align: left">고객의 의견을 들려주는 그린 테스터는 당신의 서비스의</h3>
       <p style="font-size:5px"></p>
       <h3 style="font-family: 'Noto Sans KR', sans-serif; font-size:16px; font-weight:400; color:black; text-align: left">성공 가능성을 높이는 데 도움이 되리라고 확신합니다.</h3>
-      <p style="font-size:20px"></p><br>
+      <p style="font-size:20px"></p>
+      <h3 style="font-family: 'Noto Sans KR', sans-serif; font-size:16px; font-weight:400; color:black; text-align: left">E-mail: gajahcompany@gmail.com</h3>
+      <p style="font-size:20px"></p>
+      
+      <br>
+
       <h3 style="font-family: 'Noto Sans KR', sans-serif; font-size:16px; font-weight:400; color:black; text-align: left"><b>* 제휴 모집 *</b></h3>
       <p style="font-size:5px"></p>
       <h3 style="font-family: 'Noto Sans KR', sans-serif; font-size:16px; font-weight:400; color:black; text-align: left">1. 각종 스타트업/창업 행사 -> 아이디어 검증</h3>
